--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,11 @@
   },
   "[markdown]": {
     "editor.wordWrap": "on",
-    "editor.quickSuggestions": false,
+    "editor.quickSuggestions": {
+      "comments": "off",
+      "strings": "off",
+      "other": "off"
+    },
     "editor.formatOnSave": false
-  },
+  }
 }
