--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "minordb",
-  "version": "0.0.15",
+  "version": "0.1.0",
   "description": "this is web-client database based on indexdb",
-  "main": "./dist/minordb.min.js",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/minordb.umd.js",
+  "module": "./dist/minordb.es.js",
   "types": "./dist/src/index.d.ts",
   "exports": {
-    ".": "./dist/minordb.min.js"
+    ".": {
+      "import": "./dist/minordb.es.js",
+      "require": "./dist/minordb.umd.cjs"
+    }
   },
   "scripts": {
     "test": "node ",
-    "dev": "webpack  --node-env=development  --progress --watch ",
-    "build": "webpack  --node-env production  --progress --watch "
+    "dev": "vite",
+    "build": "tsc && vite build"
   },
   "author": "znq",
   "license": "MIT",
@@ -21,15 +29,12 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "babel-loader": "^8.2.2",
+    "@types/node": "^18.11.18",
+    "@vitejs/plugin-legacy": "^4.0.1",
     "chai": "^4.3.4",
-    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.3.0",
-    "eslint-webpack-plugin": "^3.1.1",
     "mocha": "^9.1.3",
-    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0"
+    "vite": "^4.0.4"
   }
 }
