--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "minordb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "this is web-client database based on indexdb",
   "type": "module",
   "files": [
-    "dist"
+    "dist",
+    "lib"
   ],
-  "main": "./dist/minordb.umd.js",
-  "module": "./dist/minordb.es.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "./dist/minordb.umd.min.js",
+  "module": "./dist/minordb.es.min.js",
+  "types": "./lib/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/minordb.es.js",
-      "require": "./dist/minordb.umd.cjs"
+      "import": "./dist/minordb.es.min.js",
+      "require": "./dist/minordb.umd.min.js"
     }
   },
   "scripts": {
@@ -35,6 +36,7 @@
     "eslint": "^8.3.0",
     "mocha": "^9.1.3",
     "typescript": "^4.7.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-dts": "^1.7.2"
   }
 }
